# artemis

./: .gitignore  AGENTS.md  Cargo.toml  README.md
crate-template/: Cargo.toml
crates/artemis-core/: Cargo.toml
crates/artemis-core/src/: engine.rs  lib.rs  mevshare.rs  types.rs
crates/artemis-core/src/collectors/: block_collector.rs  log_collector.rs  mempool_collector.rs  mevshare_collector.rs  mod.rs
crates/artemis-core/src/executors/: flashbots_executor.rs  flashbots_single_executor.rs  mempool_executor.rs  mev_share_executor.rs  mod.rs
crates/generator/: Cargo.toml
crates/generator/src/: parser.rs
crates/strategies/mev-share-uni-arb/: Cargo.toml
crates/strategies/mev-share-uni-arb/bindings/: Cargo.toml
crates/strategies/mev-share-uni-arb/bindings/src/: lib.rs
crates/strategies/mev-share-uni-arb/contracts/src/: BlindArb.sol
crates/strategies/mev-share-uni-arb/src/: strategy.rs  types.rs
examples/mev-share-arb/: Cargo.toml
examples/mev-share-arb/src/: main.rs
