[workspace]
resolver = "3"

members = [
    "bin/artemis",
    "bin/cli",
    "crates/artemis-core",
    "crates/generator",
    "crates/strategies/mev-share-uni-arb",
    "examples/*",
]
default-members = ["bin/artemis", "bin/cli"]

[workspace.dependencies]
## eth
alloy = { version = "1.1.0", features = ["full", "provider-mev-api"] }

mev-share-sse = "0.5.1"

[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'
