[package]
name = "artemis-core"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

## eth
alloy.workspace = true
ethers.workspace = true
opensea-stream = { git = "https://github.com/FrankieIsLost/opensea-stream-rs"}

## async
async-trait = "0.1.64"
futures = "0.3"
reqwest = { version = "0.11.14", default-features = false, features = ["rustls-tls", "stream"] }
tokio = { version = "1.18", features = ["full"] }
tokio-stream = { version = "0.1", features = ['sync'] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

## misc
anyhow = "1.0.70"
thiserror = "1.0.40"
tracing = "0.1.37"
