[package]
name = "artemis-core"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

## eth
alloy.workspace = true

mev-share-sse.workspace = true

## async
async-trait = "0.1.64"
futures = "0.3"
tokio = { version = "1.18", features = ["full"] }
tokio-stream = { version = "0.1", features = ['sync'] }
serde = { version = "1.0", features = ["derive"] }

## misc
anyhow = "1.0.70"
tracing = "0.1.37"
