[package]
name = "mev-share-arb"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"


[dependencies]
alloy.workspace = true
tokio = { version = "1.18", features = ["full"] }
artemis-core = { path = "../../crates/artemis-core" }
mev-share-uni-arb = { path = "../../crates/strategies/mev-share-uni-arb" }
anyhow = "1.0.70"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
clap = { version = "4.2.5", features = ["derive"] }
