[package]
name = "mev-share-uni-arb"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy.workspace = true
async-trait = "0.1.64"
artemis-core = { path = "../../artemis-core" }
anyhow = "1.0.70"
tracing = "0.1.37"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
mev-share-bindings = { path = "./bindings" }
